<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingStart="5dp">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/tracks_select"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spn_tracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/details"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/swt_use_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/use_gps"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv_dsp_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:labelFor="@+id/spn_dep_type"
            android:text="@string/speed_type"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spn_dep_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Switch
        android:id="@+id/swt_rdm_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/use_rdm_music"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directory"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_select"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginStart="5dp"
                android:labelFor="@+id/edt_path"
                android:text="..." />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txv_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        />

</LinearLayout>
