<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txv_name"
            android:labelFor="@+id/edt_alarm_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="5dp"
            android:layout_row="0"
            android:text="@string/alarm_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edt_alarm_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:layout_row="0"
            android:ems="12"
            android:inputType="textLongMessage"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/txv_desc"
            android:labelFor="@+id/edt_alarm_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="5dp"
            android:layout_row="1"
            android:text="@string/alarm_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edt_alarm_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:layout_row="1"
            android:ems="12"
            android:inputType="textMultiLine|textLongMessage" />


        <TextView
            android:id="@+id/txv_date"
            android:labelFor="@+id/edt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="5dp"
            android:layout_row="2"
            android:text="@string/alarm_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:layout_row="2"
            android:ems="12"
            android:inputType="date" />


        <TextView
            android:id="@+id/txv_time"
            android:labelFor="@+id/edt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="5dp"
            android:layout_row="3"
            android:text="@string/alarm_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:layout_row="3"
            android:ems="12"
            android:inputType="time" />


        <TextView
            android:id="@+id/txv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="5dp"
            android:layout_row="4"
            android:text="@string/alarm_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spn_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:layout_row="4"
            android:ems="12"
            android:enabled="false"
            android:inputType="time" />
    </GridLayout>


    <TextView
        android:id="@+id/txv_audioPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_alarm_paramAudio"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark" />


</LinearLayout>