<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edt_name"
            android:text="@string/alarm_name" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/txv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edt_latitude"
            android:text="@string/latitude" />

        <EditText
            android:id="@+id/edt_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="6"
            android:inputType="number|numberSigned|numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/txv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edt_longitude"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/edt_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number|numberSigned|numberDecimal" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/txv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edt_desc"
            android:text="@string/alarm_desc" />

        <EditText
            android:id="@+id/edt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="12"
            android:inputType="text|textMultiLine"
            android:text="Name" />
    </TableRow>

</TableLayout>